--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   get: ^4.6.6
   file_picker: ^8.1.2
   styled_text: ^8.1.0
+  getwidget: ^4.0.0
+  lottie: ^3.1.2
+  flutter_spinkit: ^5.2.1
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
@@ -32,11 +36,5 @@ flutter:
   fonts:
     - family: Schyler
       fonts:
-        - asset: fonts/Schyler-Regular.ttf
-        - asset: fonts/Schyler-Italic.ttf
-          style: italic
-    - family: Trajan Pro
-      fonts:
-        - asset: fonts/TrajanPro.ttf
-        - asset: fonts/TrajanPro_Bold.ttf
+        - asset: fonts/Schyler-Regular.otf
           weight: 700
