--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.0.0'
+          flutter-version-file: pubspec.yaml
 
       - name: Install dependencies
         run: flutter pub get
