--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ version: 1.0.0+1
 
 environment:
   sdk: '>=3.4.4 <4.0.0'
-  flutter: '>=3.20.0 <=3.24.3'
+  flutter: 3.24.3
 
 dependencies:
   flutter:
