--- a/.github/workflows/multi-platform-build.yml
+++ b/.github/workflows/multi-platform-build.yml
@@ -22,6 +22,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # 安装 yq
+      - name: Install yq
+        run: choco install yq
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -96,6 +100,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+    
+      - name: Install dependencies for Linux build
+        run: sudo apt-get install -y cmake ninja-build gcc g++ libgtk-3-dev yq
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -104,9 +112,6 @@ jobs:
 
       - name: Install dependencies
         run: flutter pub get
-
-      - name: Install dependencies for Linux build
-        run: sudo apt-get install -y cmake ninja-build gcc g++
 
       - name: Build Linux
         run: flutter build linux
