--- a/.github/workflows/multi-platform-build.yml
+++ b/.github/workflows/multi-platform-build.yml
@@ -102,7 +102,7 @@ jobs:
 
     
       - name: Install dependencies for Linux build
-        run: sudo apt-get install -y cmake ninja-build gcc g++ libgtk-3-dev yq
+        run: sudo apt-get install -y cmake ninja-build gcc g++ libgtk-3-dev
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
