--- a/.github/workflows/multi-platform-build.yml
+++ b/.github/workflows/multi-platform-build.yml
@@ -102,6 +102,12 @@ jobs:
   build-android:
     runs-on: macos-latest
     steps:
+      - name: Set up Java 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'adopt'
+          java-version: '21'
+
       - name: Checkout code
         uses: actions/checkout@v4
 
