--- a/.github/workflows/multi-platform-build.yml
+++ b/.github/workflows/multi-platform-build.yml
@@ -13,6 +13,8 @@ on:
       - uat
       - dev
       - release
+env:
+  name: "TXT Reader"
 
 jobs:
   # Windows 构建任务：只编译 Windows 应用
@@ -42,7 +44,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: windows-build
-          path: build/windows/runner.exe
+          path: build\windows\x64\runner\Release\txt_reader.exe
 
   # macOS 构建任务
   build-macos:
@@ -62,14 +64,30 @@ jobs:
 
       # 编译 macOS
       - name: Build macOS
-        run: flutter build macos
+        run: flutter build macos --release
+
+      - name: Install create-dmg
+        run: brew install create-dmg
+
+      - name: Create DMG file
+        run: |
+          mkdir -p build/macos/dmg
+          create-dmg \
+            --volname "${{ env.NAME }}" \
+            --window-pos 200 120 \
+            --window-size 800 400 \
+            --icon-size 100 \
+            --icon "runner.app" 200 190 \
+            --app-drop-link 600 185 \
+            "build/macos/Build/Products/Release/txt_reader.app" \
+            "build/macos/dmg/"
 
       # 上传 macOS 构建产物
       - name: Upload macOS Build Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: macos-build
-          path: build/macos/runner.app
+          path: build/macos/dmg/*.dmg
 
     # iOS 构建任务
   build-ios:
@@ -91,12 +109,22 @@ jobs:
       - name: Build iOS
         run: flutter build ios --no-codesign
 
+      # 安装 fastlane 并导出 ipa
+      - name: Install Fastlane
+        run: sudo gem install fastlane
+
+      # 使用 fastlane 导出 IPA 文件
+      - name: Create IPA File
+        run: |
+            mkdir -p build/ios/ipa
+            fastlane gym --scheme "Runner" --export_method "app-store" --output_directory "./build/ios/ipa"
+
       # 上传 iOS 构建产物
       - name: Upload iOS Build Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: ios-build
-          path: build/ios/Runner.app
+          path: build/ios/ipa/*.ipa
 
     # Android 构建任务
   build-android:
@@ -160,4 +188,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-build
-          path: build/linux/runner
+          path: build/linux/x64/release/bundle/txt_reader
