feat: add release cd script

--- a/.github/workflows/multi-platform-build.yml
+++ b/.github/workflows/multi-platform-build.yml
@@ -14,7 +14,7 @@ on:
       - dev
       - release
 env:
-  name: "TXT Reader"
+  name: "TXT-Reader"
 
 jobs:
   # Windows 构建任务：只编译 Windows 应用
@@ -40,11 +40,16 @@ jobs:
       - name: Build Windows
         run: flutter build windows
 
+          # 重命名生成的 exe 文件
+      - name: Rename executable
+        run: |
+            move build\windows\x64\runner\Release\txt_reader.exe build\windows\x64\runner\Release\${{ env.NAME }}.exe
+
       - name: Upload Windows Build Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: windows-build
-          path: build\windows\x64\runner\Release\txt_reader.exe
+          path: build\windows\x64\runner\Release\${{ env.NAME }}.exe
 
   # macOS 构建任务
   build-macos:
@@ -73,7 +78,7 @@ jobs:
         run: |
           mkdir -p build/macos/dmg
           create-dmg \
-            --volname "${{ env.NAME }}" \
+            --volname "${{ env.NAME }}.dmg" \
             --window-pos 200 120 \
             --window-size 800 400 \
             --icon-size 100 \
@@ -87,7 +92,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: macos-build
-          path: build/macos/dmg/*.dmg
+          path: build/macos/dmg/${{ env.NAME }}.dmg
 
     # iOS 构建任务
   build-ios:
@@ -117,7 +122,7 @@ jobs:
       - name: Create IPA File
         run: |
             mkdir -p build/ios/ipa
-            fastlane gym --scheme "Runner" --export_method "app-store" --output_directory "./build/ios/ipa"
+            fastlane gym --scheme "Runner" --export_method "development" --output_directory "./build/ios/ipa" --output_name ${{ env.NAME }}.ipa --no-codesign
 
       # 上传 iOS 构建产物
       - name: Upload iOS Build Artifacts
@@ -152,6 +157,10 @@ jobs:
       - name: Build Android
         run: flutter build apk
 
+      - name: Rename APK
+        run: |
+          mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/${{ env.NAME }}.apk
+
       # 上传 Android 构建产物
       - name: Upload Android Build Artifacts
         uses: actions/upload-artifact@v4
@@ -183,6 +192,10 @@ jobs:
 
       - name: Build Linux
         run: flutter build linux
+
+      - name: Rename executable
+        run: |
+          mv build/linux/x64/release/bundle/txt_reader build/linux/x64/release/bundle/${{ env.NAME }}
 
       - name: Upload Linux Build Artifacts
         uses: actions/upload-artifact@v4
