--- a/.github/workflows/multi-platform-build.yml
+++ b/.github/workflows/multi-platform-build.yml
@@ -16,6 +16,7 @@ on:
 
 env:
   name: "TXT-Reader"
+  raw_name: txt_reader
 
 jobs:
   # Windows 构建任务：只编译 Windows 应用
@@ -41,7 +42,7 @@ jobs:
       - name: Build Windows
         run: flutter build windows
 
-          # 重命名生成的 exe 文件
+      # 重命名生成的 exe 文件
       - name: Rename executable
         run: |
             move build\windows\x64\runner\Release\txt_reader.exe build\windows\x64\runner\Release\${{ env.name }}.exe
@@ -85,8 +86,8 @@ jobs:
             --icon-size 100 \
             --icon "runner.app" 200 190 \
             --app-drop-link 600 185 \
-            "build/macos/Build/Products/Release/txt_reader.app" \
-            "build/macos/dmg/${{ env.name }}.dmg"
+            "build/macos/Build/Products/Release/${{ env.raw_name }}.app" \
+            "build/macos/dmg/"
 
       # 上传 macOS 构建产物
       - name: Upload macOS Build Artifacts
@@ -121,9 +122,17 @@ jobs:
 
       # 使用 fastlane 导出 IPA 文件
       - name: Create IPA File
+        env:
+            FASTLANE_SKIP_UPDATE_CHECK: "true"
+            FASTLANE_DISABLE_COLORS: "true"
         run: |
             mkdir -p build/ios/ipa
-            fastlane gym --scheme "Runner" --export_method "development" --output_directory "./build/ios/ipa" --output_name ${{ env.name }}.ipa --xcargs "CODE_SIGNING_ALLOWED=NO"
+            fastlane gym --scheme "Runner" \
+            --export_method "development" \
+            --output_directory "./build/ios/ipa" \
+            --output_name ${{ env.name }}.ipa \
+            --xcargs "CODE_SIGNING_ALLOWED=NO" \
+            --workspace "ios/Runner.xcworkspace"
 
       # 上传 iOS 构建产物
       - name: Upload iOS Build Artifacts
@@ -196,7 +205,7 @@ jobs:
 
       - name: Rename executable
         run: |
-          mv build/linux/x64/release/bundle/txt_reader build/linux/x64/release/bundle/${{ env.name }}
+          mv build/linux/x64/release/bundle/${{ env.raw_name }} build/linux/x64/release/bundle/${{ env.name }}
 
       - name: Upload Linux Build Artifacts
         uses: actions/upload-artifact@v4
