--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,10 @@ env:
 jobs:
   release:
     runs-on: ubuntu-latest
+    permissions:
+        contents: write
+        packages: write
+        actions: write
 
     steps:
       - name: Checkout code
