--- a/ExportOptions.plist
+++ b/ExportOptions.plist
@@ -3,9 +3,11 @@
 <plist version="1.0">
   <dict>
     <key>method</key>
-    <string>ad-hoc</string>
+    <string>development</string>
     <key>signingStyle</key>
     <string>manual</string>
+    <key>teamID</key>
+    <string>ABCDE12345</string>
     <key>compileBitcode</key>
     <false/>
     <key>destination</key>
