--- a/.github/workflows/multi-platform-build.yml
+++ b/.github/workflows/multi-platform-build.yml
@@ -122,12 +122,14 @@ jobs:
         run: |
             mkdir -p build/ios/ipa
 
-            xcodebuild -workspace ios/Runner.xcworkspace -scheme Runner archive \
+            xcodebuild -jobs 2 archive \
+            -workspace ios/Runner.xcworkspace -scheme Runner archive \
             -configuration Release -sdk iphoneos \
             -archivePath build/ios/archive/Runner.xcarchive \
             CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
 
-            xcodebuild -exportArchive -archivePath build/ios/archive/Runner.xcarchive \
+            xcodebuild -jobs 2 archive \
+            -exportArchive -archivePath build/ios/archive/Runner.xcarchive \
             -exportPath build/ios/ipa \
             -exportOptionsPlist ExportOptions.plist \
             CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
