--- a/.github/workflows/multi-platform-build.yml
+++ b/.github/workflows/multi-platform-build.yml
@@ -122,18 +122,21 @@ jobs:
         run: |
             mkdir -p build/ios/ipa
 
-            xcodebuild -jobs 2 archive \
-            -workspace ios/Runner.xcworkspace -scheme Runner archive \
+            xcodebuild -quiet archive -workspace ios/Runner.xcworkspace -scheme Runner archive \
             -configuration Release -sdk iphoneos \
             -archivePath build/ios/archive/Runner.xcarchive \
-            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
+            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO -jobs 1
 
-            xcodebuild -jobs 2 archive \
-            -exportArchive -archivePath build/ios/archive/Runner.xcarchive \
+      - name: Export IPA
+        run: |
+            ulimit -m 819200
+            xcodebuild -exportArchive -archivePath build/ios/archive/Runner.xcarchive \
             -exportPath build/ios/ipa \
             -exportOptionsPlist ExportOptions.plist \
-            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
+            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO -jobs 1 -verbose
 
+      - name: Rename IPA
+        run: |
             mv build/ios/ipa/Runner.ipa build/ios/ipa/${{ env.name }}.ipa
 
         # 上传 iOS 构建产物
