--- a/.github/workflows/multi-platform-build.yml
+++ b/.github/workflows/multi-platform-build.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/cache@v4
         with:
             path: |
-                ~/.pub-cache
+                /home/runner/.pub-cache
                 flutter/bin/cache
             key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.yaml') }}
             restore-keys: |
@@ -45,15 +45,12 @@ jobs:
       - name: Install dependencies (pub get)
         run: flutter pub get
 
-      - name: Debug pub-cache path
-        run: ls -la ${{ runner.home }}/.pub-cache
-
       # 保存缓存供后续平台构建使用
       - name: Upload dependencies cache
         uses: actions/upload-artifact@v4
         with:
             name: dependencies-cache
-            path: ${{ runner.home }}/.pub-cache
+            path: /home/runner/.pub-cache
 
   # Windows 构建任务：只编译 Windows 应用
   build-windows:
