--- a/.github/workflows/multi-platform-build.yml
+++ b/.github/workflows/multi-platform-build.yml
@@ -26,21 +26,34 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        id: flutter-action
+        with:
+            cache: true
+            channel: stable
+            flutter-version-file: pubspec.yaml
+
+      - name: Print outputs
+        shell: bash
+        run: |
+            echo CACHE-PATH=${{ steps.flutter-action.outputs.CACHE-PATH }}
+            echo CACHE-KEY=${{ steps.flutter-action.outputs.CACHE-KEY }}
+            echo CHANNEL=${{ steps.flutter-action.outputs.CHANNEL }}
+            echo VERSION=${{ steps.flutter-action.outputs.VERSION }}
+            echo ARCHITECTURE=${{ steps.flutter-action.outputs.ARCHITECTURE }}
+            echo PUB-CACHE-PATH=${{ steps.flutter-action.outputs.PUB-CACHE-PATH }}
+            echo PUB-CACHE-KEY=${{ steps.flutter-action.outputs.PUB-CACHE-KEY }}
+
       - name: Cache Flutter dependencies
         uses: actions/cache@v4
         with:
             path: |
-                /home/runner/.pub-cache
-                flutter/bin/cache
+                ${{ steps.flutter-action.outputs.PUB-CACHE-PATH }}
+                ${{ steps.flutter-action.outputs.CACHE-PATH }}
             key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.yaml') }}
             restore-keys: |
                 ${{ runner.os }}-flutter-
-
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-            channel: stable
-            flutter-version-file: pubspec.yaml
 
       - name: Install dependencies (pub get)
         run: flutter pub get
@@ -55,6 +68,7 @@ jobs:
   # Windows 构建任务：只编译 Windows 应用
   build-windows:
     runs-on: windows-latest
+    needs: setup
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -94,6 +108,7 @@ jobs:
   # macOS 构建任务
   build-macos:
     runs-on: macos-latest
+    needs: setup
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -143,6 +158,7 @@ jobs:
     # iOS 构建任务
   build-ios:
     runs-on: macos-latest
+    needs: setup
     steps:
       - name: Monitor Resource Usage
         run: vm_stat
@@ -199,6 +215,7 @@ jobs:
     # Android 构建任务
   build-android:
     runs-on: macos-latest
+    needs: setup
     steps:
       - name: Set up Java 17
         uses: actions/setup-java@v4
@@ -241,6 +258,7 @@ jobs:
   # Linux 构建任务：只编译 Linux 应用
   build-linux:
     runs-on: ubuntu-latest
+    needs: setup
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
