--- a/.github/workflows/multi-platform-build.yml
+++ b/.github/workflows/multi-platform-build.yml
@@ -80,6 +80,14 @@ jobs:
       - name: Install yq
         run: choco install yq
 
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        id: flutter-action
+        with:
+            cache: true
+            channel: stable
+            flutter-version-file: pubspec.yaml
+
       # 下载依赖项缓存
       - name: Download dependencies cache
         uses: actions/download-artifact@v4
@@ -93,7 +101,7 @@ jobs:
           key: windows-build-${{ hashFiles('pubspec.yaml') }}
           restore-keys: |
             windows-build-
-
+      
       - name: Build Windows
         run: flutter build windows
 
@@ -115,6 +123,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        id: flutter-action
+        with:
+            cache: true
+            channel: stable
+            flutter-version-file: pubspec.yaml
 
       # 下载依赖项缓存
       - name: Download dependencies cache
@@ -168,6 +184,14 @@ jobs:
         
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        id: flutter-action
+        with:
+            cache: true
+            channel: stable
+            flutter-version-file: pubspec.yaml
 
       # 下载依赖项缓存
       - name: Download dependencies cache
@@ -229,6 +253,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        id: flutter-action
+        with:
+            cache: true
+            channel: stable
+            flutter-version-file: pubspec.yaml
+
       # 下载依赖项缓存
       - name: Download dependencies cache
         uses: actions/download-artifact@v4
@@ -271,6 +303,14 @@ jobs:
 
       - name: Install dependencies for Linux build
         run: sudo apt-get install -y cmake ninja-build gcc g++ libgtk-3-dev
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        id: flutter-action
+        with:
+            cache: true
+            channel: stable
+            flutter-version-file: pubspec.yaml
 
       # 下载依赖项缓存
       - name: Download dependencies cache
